[package]
name = "biograf-rs"
version = "2023.10.6"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "A simple helper tool to quickly optimize your YouTube playlists"
repository = "https://github.com/flying7eleven/biograf-rs"
readme = "README.md"
license-file = "LICENSE.md"

[dependencies.chrono]
version = "0.4.26"
default-features = false

[dependencies.log]
version = "0.4.18"
default-features = false

[dependencies.fern]
version = "0.6.2"
default-features = false

[dependencies.indicatif]
version = "0.17.5"
default-features = false

[dependencies.google-youtube3]
version = "5.0.2"
default-features = false