[package]
name = "biograf-rs"
version = "2023.10.6"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "A simple helper tool to quickly optimize your YouTube playlists"
repository = "https://github.com/flying7eleven/biograf-rs"
readme = "README.md"
license-file = "LICENSE.md"

[dependencies.chrono]
version = "0.4.31"
default-features = false

[dependencies.dialoguer]
version = "0.11.0"
default-features = false

[dependencies.fern]
version = "0.6.2"
default-features = false

[dependencies.google-youtube3]
version = "5.0.3"
default-features = true

[dependencies.lazy_static]
version = "1.4.0"
default-features = false

[dependencies.log]
version = "0.4.20"
default-features = false

[dependencies.serde]
version = "1.0.188"
default-features = false

[dependencies.serde_derive]
version = "1.0.188"
default-features = false

[dependencies.serde_json]
version = "1.0.107"
default-features = false

[dependencies.tokio]
version = "1.33.0"
default-features = false
features = ["rt-multi-thread"]